# linkedin-crawler

./: .gitignore  docker-compose.yml
alembic/: alembic.ini  pyproject.toml
alembic/alembic/versions/: 3b22680d8fa7_make_location_in_experience_nullable.py  618d3bdcb432_make_company_urn_in_experience_nullable.py  724d9100ce60_make_degree_activities_nullable.py  8696e1942b9a_make_some_cols_nullable.py  99ae21a13877_change_datetimes_to_integer_year.py  afdb9eb69331_init_models.py
doc/: document.tex  header.tex  main.tex  updater.sh
linkedin/: pyproject.toml  stocks.json
linkedin/linkedin/: main.py  models.py  raw_stocks.py
