[tool.poetry]
name = "alem"
version = "0.1.0"
description = ""
authors = ["SmsS4 <smss.lite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
GeoAlchemy2 = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
