[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = ""
authors = ["SmsS4 <smss.lite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
linkedin-api = "~=2.0.0a"
ipython = "^8.6.0"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.44"
dynaconf = "^3.1.11"
glogger = {path = "../glogger", develop=true}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
